@@ -1,0 +1,1 @@
+DDSend=function(D,A,B){if(D){this.init(D,A,B);this.initFrame()}var C=this.getDragEl().style;C.borderColor="transparent";C.backgroundColor="#f6f5e5";C.opacity=0.76;C.filter="alpha(opacity=76)"};DDSend.prototype=new YAHOO.util.DDProxy();DDSend.prototype.onDragDrop=function(A,B){document.fire("yuitreeview:drop",{itemId:this.id,droppedOnId:B})};DDSend.prototype.startDrag=function(B,D){var A=this.getDragEl();var C=this.getEl();A.innerHTML=C.innerHTML;A.className=C.className;A.style.color=C.style.color;A.style.border="1px solid red"};DDSend.prototype.onDragEnter=function(B,C){var A;if("string"==typeof C){A=YAHOO.util.DDM.getElement(C)}else{A=YAHOO.util.DDM.getBestMatch(C).getEl()}A.style.border="1px solid red"};DDSend.prototype.onDragOut=function(B,C){var A;if("string"==typeof C){A=YAHOO.util.DDM.getElement(C)}else{A=YAHOO.util.DDM.getBestMatch(C).getEl()}A.style.border=""};DDSend.prototype.endDrag=function(A){};
